# quant-trading

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-01-quant-trading-init.md
docs/superpowers/specs/: 2026-06-01-quant-trading-design.md
examples/: run_factor_mining.py  run_real_data.py
quant_trading/data/: handler.py  loader.py  preprocessing.py
quant_trading/factors/: price.py  technical.py  volume.py
quant_trading/metrics/: core.py
quant_trading/models/: base.py  gbdt.py
skills/factor_mining/: __init__.py  kimi_client.py  llm_clients.py  prompts.py  runner.py  sandbox.py  skill.py
src/backtest/: engine.py
src/data/: handler.py
src/factors/: base.py  price.py  registry.py  technical.py  volume.py
src/models/: cross_validation.py  gbdt.py
src/pipeline/: rolling.py
src/quant_trading/: __init__.py
src/quant_trading/backtest/: engine.py  (+1 more)
src/utils/: config.py
tests/: conftest.py  test_integration.py
tests/test_backtest/: test_engine.py  test_executor.py
tests/test_data/: test_cleaner.py  test_handler.py  test_loader.py  test_loader_cache.py  test_preprocessing.py
tests/test_experiments/: test_recorder.py
tests/test_factors/: test_base.py  test_evaluator.py  test_price.py  test_registry.py  test_technical.py  test_volume.py
tests/test_metrics/: test_core.py
tests/test_models/: test_base.py  test_cross_validation.py  test_gbdt.py  test_validation.py
tests/test_pipeline/: test_rolling.py
tests/test_portfolio/: test_strategy.py
tests/test_skills/: test_factor_mining.py
tests/test_utils/: test_config.py
(+11 files in other folders)
